--- a/css/main.css
+++ b/css/main.css
@@ -407,26 +407,27 @@ header nav ul li a {
 /* shape on about section */
 .shape-wrapper {
   position: absolute;
-  z-index: 2;
+  z-index: 0;
+
 }
 
 #polygon-shape-circle {
-  width: 80px;
-  height: 80px;
+  width: 5em;
+  height: 5em;
   border-radius: 50%;
-  box-shadow: 20px 40px 0 0 #EEA231;
+  box-shadow: 1.25em 2.5em 0 0 #EEA231;
   transform: rotate(80deg);
   position: relative; /* locate the shape */
   top: 170px;
-  left: -130px;
+  right: 40vw;
 }
 
 #polygon-shape-circle::after {
   content:"";
-  width: 40px;
-  height: 40px;
+  width: 2.5em;
+  height: 2.5em;
   border-radius: 50%;
-  box-shadow: 10px 20px 0 0 #EEA231;
+  box-shadow: 0.63em 1.25em 0 0 #EEA231;
   transform: rotate(180deg);
   left: 50%;
   top: 70%;
