right aline nav bar for tablets

--- a/css/main.css
+++ b/css/main.css
@@ -878,6 +878,10 @@ footer p {
         width: 25%;
       }
 
+      .nav-bars {
+        justify-content: flex-end;
+      }
+
       .hero-image {
         height: 95vh;
       }
