--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,7 @@ hr {
 
 .btn-third-level {
   background-color: #EEA231;
-  /*width: 30vw;*/
+  text-transform: none;
 }
 
 /*-----------------------------------------------------*/
@@ -587,8 +587,8 @@ header nav ul li a {
     background: #EEA231;
     -webkit-clip-path: polygon(66.18% 44.14%,64.24% 51.95%,62.52% 59.45%,59.85% 66.95%,56.56% 74.15%,53.06% 82.11%,48.73% 88.84%,44.19% 94.96%,39.24% 101.07%,75.56% 100.45%,83.56% 90.39%,91.35% 79.08%,96.02% 69.94%,100.07% 58.64%,101.39% -1.38%,59.24% -1.69%,63.26% 6.60%,66.46% 15.21%,67.99% 27.20%,67.92% 35.67%);
     clip-path: polygon(66.18% 44.14%,64.24% 51.95%,62.52% 59.45%,59.85% 66.95%,56.56% 74.15%,53.06% 82.11%,48.73% 88.84%,44.19% 94.96%,39.24% 101.07%,75.56% 100.45%,83.56% 90.39%,91.35% 79.08%,96.02% 69.94%,100.07% 58.64%,101.39% -1.38%,59.24% -1.69%,63.26% 6.60%,66.46% 15.21%,67.99% 27.20%,67.92% 35.67%);
-    height: 350px;
-    width: 350px;
+    height: 450px;
+    width: 200px;
     right: -5vw;
     top: 0px;
     z-index: -100; /* makes sure that the shape is kept in the background -> the other section should have z-index=1 */
@@ -631,9 +631,9 @@ header nav ul li a {
 
 .text-wrapper {
     width: 50%;
-    align-items: center;
-    justify-content: flex-start;  z-index: 100;
-
+    align-items: flex-start;
+    justify-content: center;
+    z-index: 100;
 }
 
 .hard-facts {
@@ -662,7 +662,6 @@ header nav ul li a {
 .hard-facts-item p {
   margin: 0;
   padding: 0;
-
 }
 
 .soft-facts {
