making header fixed on top of page

--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,10 @@ header {
   justify-content: center;
   flex-flow: row wrap;
   padding-bottom: 10px;
+  position: sticky; /* to make header fixed (use for desktop and tablet only) */
+  top: 0px; /* required to make the header stick to top */
+  background-color: rgba(242,242,242,0.9); /* background color for the header with transparency*/
+  z-index: 999;
 }
 
 header .content-wrapper {
