--- a/css/main.css
+++ b/css/main.css
@@ -415,6 +415,8 @@ header nav ul li a {
 
 .welcoming img {
   background: transparent;
+  border-radius: 50%;
+  transform: scaleX(-1);
 }
 
 /* shape on about section */
