--- a/css/main.css
+++ b/css/main.css
@@ -834,7 +834,7 @@ footer p {
 
 
 .abme-item-wrapper figure {
-  width: 7%;
+  width: 10%;
   padding-right: 10px;
 }
 
@@ -843,12 +843,25 @@ footer p {
   color: black;
 }
 
+.footer-container p {
+  color: #F2F2F2;
+}
+
+.copyright #impressum {
+  color: #F2F2F2;
+}
+
 /* style the div box content */
 .abme-item-wrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-flow: row nowrap;
+  padding: 0 10%;
+}
+
+.abme-item-wrapper p {
+  width: 70%;
 }
 
 .about-me-website a {
@@ -859,6 +872,9 @@ footer p {
 .div-shape {
   border: 1px solid #EEA231;
   border-radius: 10px;
+  width: 50%;
+  padding: 10px;
+  margin: 10px;
 }
 
 /* ==========================================================================
