--- a/css/main.css
+++ b/css/main.css
@@ -892,14 +892,79 @@ footer p {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-flow: column;
+  background: #3FB5AD;
+  width: 100%;
+}
+
+.lang-content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  padding: 10px 0 50px 0;
+}
+
+.lang-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-flow: row nowrap;
+  margin: 0px 0 15px 0;
+}
+
+.lang-scale {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: column;
+}
+
+.lang-scale p {
+  color: #F2F2F2;
+  margin: 0 5px;
+  font-size: 0.6em;
 }
 
 
+.lang-scale-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row nowrap;
+}
 
+/* langauge scale design */
+.lang-scale-full {
+  background: #253449;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  padding: 0 10px;
+  margin: 0 5px;
+}
 
+.lang-scale-empty {
+  background: #F2F2F2;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  padding: 0 10px;
+  margin: 0 5px;
+}
 
-
+.lang-scale-icon {
+  background: #253449;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  display: flex; /* to center the p element */
+  align-items: center;
+  justify-content: center;
+  color: #3FB5AD;
+  letter-spacing: 1px;
+  font-family: sans-serif;
+}
 
 
 /* ==========================================================================
