--- a/css/main.css
+++ b/css/main.css
@@ -895,11 +895,17 @@ footer p {
   box-sizing: border-box;
 }
 
+
+
 .timeline { /* the vertical timeline ruler */
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
   padding-bottom: 50px; /*to make the vertical line longer as the content boxes */
+}
+
+.timeline a { /* remove formatting of links */
+  text-decoration: none;
 }
 
 .timeline::after { /* the vertical timeline ruler */
@@ -957,6 +963,14 @@ footer p {
   left: 50%;
 }
 
+
+/* Place the bubble container to the right */
+.left-bubble {
+  right: -22%;
+}
+
+
+
 /* Add arrows to the left container (pointing right) */
 .left::before {
     content: '';
@@ -966,10 +980,10 @@ footer p {
     width: 30px;
     z-index: 1;
     right: 0px;
-    border: 1px dashed black;
+    border: 0.5px dashed #253449;
 }
 
-/* Add arrows to the right container (pointing left) */
+/* Add arrows lines to the right container (pointing left) */
 .right::before {
   content: '';
   height: 0;
@@ -978,7 +992,7 @@ footer p {
   width: 30px;
   z-index: 1;
   left: 0px;
-  border: 1px dashed black;
+  border: 0.5px dashed #253449;
 }
 
 /* The actual content */
@@ -1002,23 +1016,49 @@ footer p {
   font-weight: bold;
 }
 
+
+/*------------------*/
 /* style intro item */
+/*------------------*/
+
 #intro {
   background-color: transparent;
 }
 
+/* Intro container styles */
+.container-intro {
+  position: relative;
+  background-color: inherit; /*#EEA231;*/
+  width: 50%;
+  padding: 0px 70px;
+  margin-bottom: 30px;
+}
 
-/* Add arrows to the right container (pointing left) */
-#intro .right::before {
+/* intro container - circles on the timeline */
+.container-intro::after {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: -15px;
+  background-color: #253449;
+  border: 4px solid #253449;
+  top: 85px;
+  border-radius: 50%; /* to make them circle */
+  z-index: 1;
+}
+
+.intro-dash::before {
   content: '';
   height: 0;
   position: absolute;
   top: 100px;
-  width: 30px;
+  width: 280px;
   z-index: 1;
   left: 0px;
-  border: 1px dashed black;
+  border: 0.5px dashed black;
 }
+
 
 #intro h1 {
   color: #3FB5AD;
@@ -1035,9 +1075,43 @@ footer p {
   background-color: #253449; /* bubble color */
 }
 
+.bubble-container {
+  position: relative;
+  background-color: inherit; /*#EEA231;*/
+  width: 50%;
+  padding: 0px 36px;
+  margin-bottom: 30px;
+}
+
+/* The circles on the timeline */
+.bubble-container::after {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: 129px;
+  background-color: #253449;
+  border: 4px solid #253449;
+  top: 55px;
+  border-radius: 50%; /* to make them circle */
+  z-index: 1;
+}
+
 .time-bubble time {
   color: #3FB5AD; /* container color */
   font-size: 1.5em;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left-bubble::before {
+    content: '';
+    height: 0;
+    position: absolute;
+    top: 70px;
+    width: 30px;
+    z-index: 1;
+    right: 145px;
+    border: 0.5px dashed #253449;
 }
 
 /*---------- Languages section  --------------*/
