--- a/css/main.css
+++ b/css/main.css
@@ -952,9 +952,8 @@ footer p {
 
 /* Place the bubble container to the right */
 .left-bubble {
-  right: -142px;
+  left: 220px;
 }
-
 
 
 /* Add arrows to the left container (pointing right) */
@@ -1063,9 +1062,9 @@ footer p {
 
 .bubble-container {
   position: relative;
-  background-color: inherit; /*#EEA231;*/
-  width: 50%;
-  padding: 0px 36px;
+  background-color: inherit;
+  width: 100%;
+  padding: 0px 70px;
   margin-bottom: 30px;
 }
 
@@ -1415,12 +1414,40 @@ footer p {
 
       /*--------------------------------*/
       /*-------- Timeline Page ---------*/
+      /*---------------------------------*/
 
-      /* place the vertical timeline ruler to the center */
-      .timeline::after {
-        left: 50%;
+      .timeline-site {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-flow: column;
+        width: 100%;
       }
 
+      /*----------- Timeline styles ------------------*/
+
+
+      * {
+        box-sizing: border-box;
+      }
+
+
+      .timeline { /* the vertical timeline ruler */
+        position: relative;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding-bottom: 50px; /*to make the vertical line longer as the content boxes */
+      }
+
+      .timeline a { /* remove formatting of links */
+        text-decoration: none;
+      }
+
+      .timeline::after { /* place the vertical timeline ruler to the center */
+          left: 50%;
+      }
+
+      /* container around the content */
       .container {
         position: relative;
         background-color: inherit;
@@ -1428,9 +1455,18 @@ footer p {
         padding: 10px 40px;
       }
 
-      /* Fix the circle for containers on the right side */
-      .right::after {
-        left: -14px;
+      /* The circles on the timeline */
+      .container::after {
+        content: '';
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        right: -15px;
+        background-color: #253449;
+        border: 4px solid #253449;
+        top: 55px;
+        border-radius: 50%; /* to make them circle */
+        z-index: 1;
       }
 
 
@@ -1439,6 +1475,9 @@ footer p {
         left: -14px;
       }
 
+      .left::after {
+        left: 340px;
+      }
 
       /* Place the left container to the left */
       .left {
@@ -1450,9 +1489,156 @@ footer p {
         left: 50%;
       }
 
-      .left::after {
-        left: 390px;
+      /* Place the bubble container to the right */
+      .left-bubble {
+        left: 220px;
       }
+
+
+      /* Add arrows to the left container (pointing right) */
+      .left::before {
+          content: '';
+          height: 0;
+          position: absolute;
+          top: 70px;
+          width: 30px;
+          z-index: 1;
+          right: 0px;
+          border: 0.5px dashed #253449;
+      }
+
+      /* Add arrows lines to the right container (pointing left) */
+      .right::before {
+        content: '';
+        height: 0;
+        position: absolute;
+        top: 70px;
+        width: 30px;
+        z-index: 1;
+        left: 0px;
+        border: 0.5px dashed #253449;
+      }
+
+      /* The actual content */
+      .content {
+        padding: 20px 30px;
+        background-color: #EEA231;
+        position: relative;
+        border-radius: 6px;
+      }
+
+      /* styling text in content boxes */
+      .content h2 {
+        color: #B03E56;
+      }
+
+      .content p, time {
+        color: #F2F2F2;
+      }
+
+      .time {
+        font-weight: bold;
+      }
+
+
+      /*------------------*/
+      /* style intro item */
+      /*------------------*/
+
+      #intro {
+        background-color: transparent;
+      }
+
+      /* Intro container styles */
+      .container-intro {
+        position: relative;
+        background-color: inherit; /*#EEA231;*/
+        width: 50%;
+        padding: 0px 0px;
+        margin-bottom: 30px;
+      }
+
+      /* intro container - circles on the timeline */
+      .container-intro::after {
+        content: '';
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        right: -15px;
+        background-color: #253449;
+        border: 4px solid #253449;
+        top: 85px;
+        border-radius: 50%; /* to make them circle */
+        z-index: 1;
+      }
+
+      .intro-dash::before { /* the dashed line */
+        content: '';
+        height: 0;
+        position: absolute;
+        top: 100px;
+        width: 180px;
+        z-index: 1;
+        left: 0px;
+        border: 0.5px dashed black;
+      }
+
+
+      #intro h1 {
+        color: #3FB5AD;
+      }
+
+      /* style time bubbles */
+      .time-bubble {
+        border-radius: 50%;
+        width: 110px;
+        height: 110px;
+        display: flex; /* to center the text within bubble */
+        align-items: center;
+        justify-content: center;
+        background-color: #253449; /* bubble color */
+      }
+
+      .bubble-container {
+        position: relative;
+        background-color: inherit;
+        width: 100%;
+        padding: 0px 0px 10px 0;
+        margin-bottom: 30px;
+      }
+
+      /* The circles on the timeline for the time bubbles */
+      .bubble-container::after {
+        content: '';
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        left: 123px;
+        background-color: #253449;
+        border: 4px solid #253449;
+        top: 55px;
+        border-radius: 50%; /* to make them circle */
+        z-index: 1;
+      }
+
+      .time-bubble time {
+        color: #3FB5AD; /* container color */
+        font-size: 1.5em;
+      }
+
+      /* Add arrows to the left container (pointing right) */
+      .left-bubble::before {
+          content: '';
+          height: 0;
+          position: absolute;
+          top: 70px;
+          width: 30px;
+          z-index: 1;
+          left: 115px;
+          border: 0.5px dashed #253449;
+      }
+
+
 
 }
 
