--- a/css/main.css
+++ b/css/main.css
@@ -892,212 +892,10 @@ footer p {
 /*----------- Timeline styles ------------------*/
 
 
-* {
-  box-sizing: border-box;
-}
 
 
-.timeline { /* the vertical timeline ruler */
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding-bottom: 50px; /*to make the vertical line longer as the content boxes */
-}
-
-.timeline a { /* remove formatting of links */
-  text-decoration: none;
-}
-
-.timeline::after { /* the vertical timeline ruler */
-  content: '';
-  position: absolute;
-  width: 2px;
-  background-color: #253449;
-  top: 0;
-  bottom: 0;
-  left: 31px; /* desktop: 50%*/
-}
-
-/* container around the content */
-.container { /* fullwidth container */
-  width: 100%;
-  padding-left: 70px;
-  padding-right: 25px;
-}
-
-/* The circles on the timeline */
-.container::after {
-  content: '';
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  right: -15px;
-  background-color: #253449;
-  border: 4px solid #253449;
-  top: 55px;
-  border-radius: 50%; /* to make them circle */
-  z-index: 1;
-}
 
 
-.left::after,
-.right::after {
-  left: 15px;
-}
-
-/* make all right containers behave like the left ones */
-.right {
-  left: 0;
-}
-
-/* Place the bubble container to the right */
-.left-bubble {
-  left: 220px;
-}
-
-
-/* Add arrows to the left container (pointing right) */
-.left::before {
-    content: '';
-    height: 0;
-    position: absolute;
-    top: 70px;
-    width: 30px;
-    z-index: 1;
-    right: 0px;
-    border: 0.5px dashed #253449;
-}
-
-/* Add arrows lines to the right container (pointing left) */
-.right::before {
-  content: '';
-  height: 0;
-  position: absolute;
-  top: 70px;
-  width: 30px;
-  z-index: 1;
-  left: 0px;
-  border: 0.5px dashed #253449;
-}
-
-/* The actual content */
-.content {
-  padding: 20px 30px;
-  background-color: #EEA231;
-  position: relative;
-  border-radius: 6px;
-}
-
-/* styling text in content boxes */
-.content h2 {
-  color: #B03E56;
-}
-
-.content p, time {
-  color: #F2F2F2;
-}
-
-.time {
-  font-weight: bold;
-}
-
-
-/*------------------*/
-/* style intro item */
-/*------------------*/
-
-#intro {
-  background-color: transparent;
-}
-
-/* Intro container styles */
-.container-intro {
-  position: relative;
-  background-color: inherit; /*#EEA231;*/
-  width: 50%;
-  padding: 0px 0px;
-  margin-bottom: 30px;
-}
-
-/* intro container - circles on the timeline */
-.container-intro::after {
-  content: '';
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  right: -15px;
-  background-color: #253449;
-  border: 4px solid #253449;
-  top: 85px;
-  border-radius: 50%; /* to make them circle */
-  z-index: 1;
-}
-
-.intro-dash::before { /* the dashed line */
-  content: '';
-  height: 0;
-  position: absolute;
-  top: 100px;
-  width: 180px;
-  z-index: 1;
-  left: 0px;
-  border: 0.5px dashed black;
-}
-
-
-#intro h1 {
-  color: #3FB5AD;
-}
-
-/* style time bubbles */
-.time-bubble {
-  border-radius: 50%;
-  width: 110px;
-  height: 110px;
-  display: flex; /* to center the text within bubble */
-  align-items: center;
-  justify-content: center;
-  background-color: #253449; /* bubble color */
-}
-
-.bubble-container {
-  position: relative;
-  background-color: inherit;
-  width: 100%;
-  padding: 0px 70px;
-  margin-bottom: 30px;
-}
-
-/* The circles on the timeline */
-.bubble-container::after {
-  content: '';
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  right: 129px;
-  background-color: #253449;
-  border: 4px solid #253449;
-  top: 55px;
-  border-radius: 50%; /* to make them circle */
-  z-index: 1;
-}
-
-.time-bubble time {
-  color: #3FB5AD; /* container color */
-  font-size: 1.5em;
-}
-
-/* Add arrows to the left container (pointing right) */
-.left-bubble::before {
-    content: '';
-    height: 0;
-    position: absolute;
-    top: 70px;
-    width: 30px;
-    z-index: 1;
-    right: 145px;
-    border: 0.5px dashed #253449;
-}
 
 /*---------- Languages section  --------------*/
 
@@ -1444,6 +1242,12 @@ footer p {
       }
 
       .timeline::after { /* place the vertical timeline ruler to the center */
+          content: '';
+          position: absolute;
+          width: 2px;
+          background-color: #253449;
+          top: 0;
+          bottom: 0;
           left: 50%;
       }
 
@@ -1469,16 +1273,6 @@ footer p {
         z-index: 1;
       }
 
-
-      /* Fix the circle for containers on the right side */
-      .right::after {
-        left: -14px;
-      }
-
-      .left::after {
-        left: 340px;
-      }
-
       /* Place the left container to the left */
       .left {
         left: 0;
@@ -1489,12 +1283,6 @@ footer p {
         left: 50%;
       }
 
-      /* Place the bubble container to the right */
-      .left-bubble {
-        left: 220px;
-      }
-
-
       /* Add arrows to the left container (pointing right) */
       .left::before {
           content: '';
@@ -1503,7 +1291,7 @@ footer p {
           top: 70px;
           width: 30px;
           z-index: 1;
-          right: 0px;
+          right: 8px;
           border: 0.5px dashed #253449;
       }
 
@@ -1515,8 +1303,13 @@ footer p {
         top: 70px;
         width: 30px;
         z-index: 1;
-        left: 0px;
+        left: 9px;
         border: 0.5px dashed #253449;
+      }
+
+      /* Fix the circle for containers on the right side */
+      .right::after {
+        left: -14px;
       }
 
       /* The actual content */
@@ -1552,7 +1345,7 @@ footer p {
       /* Intro container styles */
       .container-intro {
         position: relative;
-        background-color: inherit; /*#EEA231;*/
+        background-color: inherit;
         width: 50%;
         padding: 0px 0px;
         margin-bottom: 30px;
@@ -1564,7 +1357,7 @@ footer p {
         position: absolute;
         width: 20px;
         height: 20px;
-        right: -15px;
+        right: -17px;
         background-color: #253449;
         border: 4px solid #253449;
         top: 85px;
@@ -1572,14 +1365,22 @@ footer p {
         z-index: 1;
       }
 
-      .intro-dash::before { /* the dashed line */
+      .intro-dash-right { /* position intro to the right */
+        left: 50%;
+      }
+
+      .intro-dash-right::after { /* position intro to the right */
+        left: -16px;
+      }
+
+      .intro-dash-right::before { /* the dashed line of intro */
         content: '';
         height: 0;
         position: absolute;
         top: 100px;
         width: 180px;
         z-index: 1;
-        left: 0px;
+        left: 9px;
         border: 0.5px dashed black;
       }
 
@@ -1602,9 +1403,12 @@ footer p {
       .bubble-container {
         position: relative;
         background-color: inherit;
-        width: 100%;
-        padding: 0px 0px 10px 0;
+        width: 50%;
+        padding: 10px 40px;
         margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end; /* to align the bubble to the right side of the left side of timeline*/
       }
 
       /* The circles on the timeline for the time bubbles */
@@ -1613,7 +1417,7 @@ footer p {
         position: absolute;
         width: 20px;
         height: 20px;
-        left: 123px;
+        right: -17px;
         background-color: #253449;
         border: 4px solid #253449;
         top: 55px;
@@ -1621,22 +1425,29 @@ footer p {
         z-index: 1;
       }
 
+      /* Place the bubble container to the right */
+        .left-bubble {
+          left: 0;
+        }
+
+        /* Add arrows to the left container (pointing right) */
+        .left-bubble::before {
+            content: '';
+            height: 0;
+            position: absolute;
+            top: 70px;
+            width: 30px;
+            z-index: 1;
+            right: 10px;
+            border: 0.5px dashed #253449;
+        }
+
       .time-bubble time {
         color: #3FB5AD; /* container color */
         font-size: 1.5em;
       }
 
-      /* Add arrows to the left container (pointing right) */
-      .left-bubble::before {
-          content: '';
-          height: 0;
-          position: absolute;
-          top: 70px;
-          width: 30px;
-          z-index: 1;
-          left: 115px;
-          border: 0.5px dashed #253449;
-      }
+
 
 
 
