--- a/css/main.css
+++ b/css/main.css
@@ -1324,86 +1324,14 @@ footer p {
 
   
 
-      * {
-        box-sizing: border-box;
-      }
-
-
-      .timeline { /* the vertical timeline ruler */
-        position: relative;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding-bottom: 50px; /*to make the vertical line longer as the content boxes */
-      }
-
-      .timeline a { /* remove formatting of links */
-        text-decoration: none;
-      }
-
       .timeline::after { /* place the vertical timeline ruler to the center */
-          content: '';
-          position: absolute;
-          width: 2px;
-          background-color: #253449;
-          top: 0;
-          bottom: 0;
           left: 50%;
       }
 
       /* container around the content */
       .container {
-        position: relative;
-        background-color: inherit;
         width: 50%;
         padding: 10px 40px;
-      }
-
-      /* The circles on the timeline */
-      .container::after {
-        content: '';
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        right: -15px;
-        background-color: #253449;
-        border: 4px solid #253449;
-        top: 55px;
-        border-radius: 50%; /* to make them circle */
-        z-index: 1;
-      }
-
-      /* Place the left container to the left */
-      .left {
-        left: 0;
-      }
-
-      /* Place the container to the right */
-      .right {
-        left: 50%;
-      }
-
-      /* Add arrows to the left container (pointing right) */
-      .left::before {
-          content: '';
-          height: 0;
-          position: absolute;
-          top: 70px;
-          width: 30px;
-          z-index: 1;
-          right: 8px;
-          border: 0.5px dashed #253449;
-      }
-
-      /* Add arrows lines to the right container (pointing left) */
-      .right::before {
-        content: '';
-        height: 0;
-        position: absolute;
-        top: 70px;
-        width: 30px;
-        z-index: 1;
-        left: 9px;
-        border: 0.5px dashed #253449;
       }
 
       /* Fix the circle for containers on the right side */
@@ -1411,25 +1339,13 @@ footer p {
         left: -14px;
       }
 
-      /* The actual content */
-      .content {
-        padding: 20px 30px;
-        background-color: #EEA231;
-        position: relative;
-        border-radius: 6px;
+      /* Place the container to the right */
+      .right {
+        left: 50%;
       }
 
-      /* styling text in content boxes */
-      .content h2 {
-        color: #B03E56;
-      }
-
-      .content p, time {
-        color: #F2F2F2;
-      }
-
-      .time {
-        font-weight: bold;
+      .left::after {
+      	left: 326px;
       }
 
 
