--- a/css/main.css
+++ b/css/main.css
@@ -892,118 +892,203 @@ footer p {
 /*----------- Timeline styles ------------------*/
 
 * {
-        box-sizing: border-box;
-      }
+  box-sizing: border-box;
+}
 
 
 .timeline { /* the vertical timeline ruler */
-        position: relative;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding-bottom: 50px; /*to make the vertical line longer as the content boxes */
-      }
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-bottom: 50px; /*to make the vertical line longer as the content boxes */
+}
 
 .timeline a { /* remove formatting of links */
-        text-decoration: none;
-      }
+    text-decoration: none;
+}
 
 
 .timeline::after { /* place the vertical timeline ruler to the left */
-          content: '';
-          position: absolute;
-          width: 2px;
-          background-color: #253449;
-          top: 0;
-          bottom: 0;
-          left: 31px; 
-      }
+    content: '';
+    position: absolute;
+    width: 2px;
+    background-color: #253449;
+    top: 0;
+    bottom: 0;
+    left: 31px;
+}
 
  /* container around the content */
-      .container {
-        position: relative;
-        background-color: inherit;
-        width: 100%;
-        padding-right: 25px;
-      }
+.container {
+    position: relative;
+    background-color: inherit;
+    width: 90%;
+    margin-left: 40px;
+    padding-left: 60px;
+    margin: 40px 0;
+}
 
-  /* The circles on the timeline */
-      .container::after {
-        content: '';
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        right: -15px;
-        background-color: #253449;
-        border: 4px solid #253449;
-        top: 55px;
-        border-radius: 50%; /* to make them circle */
-        z-index: 1;
-      }
-
-    
-    
-  /* Place the left container to the left */
-      .left {
-        left: 0;
-      }
-
-      /* Make all right containers behave like the left ones */
-  	.right {
-    	left: 0%;
-  	}
-
-      /* Add arrows to the left container (pointing right) */
-      .left::before {
-          content: '';
-          height: 0;
-          position: absolute;
-          top: 70px;
-          width: 30px;
-          z-index: 1;
-          right: 8px;
-          border: 0.5px dashed #253449;
-      }
+/* The circles on the timeline */
+.container::after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    right: -15px;
+    background-color: #253449;
+    border: 4px solid #253449;
+    top: 55px;
+    border-radius: 50%; /* to make them circle */
+    z-index: 1;
+  }
 
 
-      /* Add arrows lines to the right container (pointing left) */
-      .right::before {
-        content: '';
-        height: 0;
-        position: absolute;
-        top: 70px;
-        width: 30px;
-        z-index: 1;
-        left: 9px;
-        border: 0.5px dashed #253449;
-      }
+
+/* Place the left container to the left */
+.left {
+    left: 0;
+}
+
+/* Make all right containers behave like the left ones */
+.right {
+  	left: 0%;
+}
 
 
-       /* Make sure all circles are at the same spot */
-  		.left::after, .right::after {
-    	left: 15px;
-  	}   
+/* Make sure all circles are at the same spot */
+.left::after, .right::after {
+    top: 15px;
+    left: 18px;
+}
 
-  		/* The actual content */
-      .content {
-        padding: 20px 30px;
-        background-color: #EEA231;
-        position: relative;
-        border-radius: 6px;
-      }
+/* The actual content */
+.content {
+    padding: 20px 30px;
+    background-color: #EEA231;
+    position: relative;
+    border-radius: 6px;
+}
 
 
-      /* styling text in content boxes */
-      .content h2 {
-        color: #B03E56;
-      }
+/* styling text in content boxes */
+.content h2 {
+    color: #B03E56;
+}
 
-      .content p, time {
-        color: #F2F2F2;
-      }
+.content p, time {
+    color: #F2F2F2;
+}
 
-      .time {
-        font-weight: bold;
-      }  
+.time {
+    font-weight: bold;
+}
+
+
+/*------------------*/
+/* style intro item */
+/*------------------*/
+
+#intro {
+    background-color: transparent;
+}
+
+
+/* Intro container styles */
+.container-intro {
+    position: relative;
+    background-color: inherit;
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+    margin-bottom: 30px;
+}
+
+
+/* intro container - circles on the timeline */
+.container-intro::after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    right: -17px;
+    background-color: #253449;
+    border: 4px solid #253449;
+    top: 85px;
+    border-radius: 50%; /* to make them circle */
+    z-index: 1;
+}
+
+.intro-dash-right { /* position intro to the right */
+    left: 0%;
+}
+
+.intro-dash-right::after { /* position intro to the right */
+    left: 16px;
+}
+
+.intro-dash-right::before { /* the dashed line of intro */
+    content: '';
+    height: 0;
+    position: absolute;
+    top: 100px;
+    width: 180px;
+    z-index: 1;
+    left: 9px;
+    border: 0.5px dashed black;
+}
+
+#intro h1 {
+    color: #3FB5AD;
+}
+
+/* style time bubbles */
+.time-bubble {
+    border-radius: 50%;
+    width: 60px; /* size of the time bubbles */
+    height: 60px; /* size of the time bubbles */
+    display: flex; /* to center the text within bubble */
+    align-items: center;
+    justify-content: center;
+    background-color: #253449; /* bubble color */
+}
+
+.bubble-container {
+    position: relative;
+    background-color: inherit;
+    width: 100%;
+    padding-left: 50px;
+    padding-right: 25px;
+    margin: 30px 0 ;
+}
+
+
+/* The circles on the timeline for the time bubbles */
+.bubble-container::after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 8px;
+    background-color: #253449;
+    border: 4px solid #253449;
+    top: 15px;
+    border-radius: 50%; /* to make them circle */
+    z-index: 1;
+}
+
+
+
+/* Place the bubble container to the right */
+.left-bubble {
+    left: 10px;
+}
+
+.time-bubble time {
+    color: #3FB5AD; /* container color */
+    font-size: 1.5em;
+}
+
+
 
 /*---------- Languages section  --------------*/
 
@@ -1322,7 +1407,7 @@ footer p {
       /*-------- Timeline Page ---------*/
       /*---------------------------------*/
 
-  
+
 
       .timeline::after { /* place the vertical timeline ruler to the center */
           left: 50%;
@@ -1332,6 +1417,7 @@ footer p {
       .container {
         width: 50%;
         padding: 10px 40px;
+        margin: 0;
       }
 
       /* Fix the circle for containers on the right side */
@@ -1349,35 +1435,40 @@ footer p {
       }
 
 
+      /* Add arrows to the left container (pointing right) */
+      .left::before {
+          content: '';
+          height: 0;
+          position: absolute;
+          top: 70px;
+          width: 30px;
+          z-index: 1;
+          right: 8px;
+          border: 0.5px dashed #253449;
+      }
+
+
+      /* Add arrows lines to the right container (pointing left) */
+      .right::before {
+          content: '';
+          height: 0;
+          position: absolute;
+          top: 70px;
+          width: 30px;
+          z-index: 1;
+          left: 9px;
+          border: 0.5px dashed #253449;
+      }
+
       /*------------------*/
       /* style intro item */
       /*------------------*/
 
-      #intro {
-        background-color: transparent;
-      }
-
       /* Intro container styles */
       .container-intro {
-        position: relative;
-        background-color: inherit;
         width: 50%;
         padding: 0px 0px;
         margin-bottom: 30px;
-      }
-
-      /* intro container - circles on the timeline */
-      .container-intro::after {
-        content: '';
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        right: -17px;
-        background-color: #253449;
-        border: 4px solid #253449;
-        top: 85px;
-        border-radius: 50%; /* to make them circle */
-        z-index: 1;
       }
 
       .intro-dash-right { /* position intro to the right */
@@ -1388,21 +1479,6 @@ footer p {
         left: -16px;
       }
 
-      .intro-dash-right::before { /* the dashed line of intro */
-        content: '';
-        height: 0;
-        position: absolute;
-        top: 100px;
-        width: 180px;
-        z-index: 1;
-        left: 9px;
-        border: 0.5px dashed black;
-      }
-
-
-      #intro h1 {
-        color: #3FB5AD;
-      }
 
       /* style time bubbles */
       .time-bubble {
@@ -1425,6 +1501,7 @@ footer p {
         align-items: center;
         justify-content: flex-end; /* to align the bubble to the right side of the left side of timeline*/
       }
+
 
       /* The circles on the timeline for the time bubbles */
       .bubble-container::after {
@@ -1462,7 +1539,39 @@ footer p {
         font-size: 1.5em;
       }
 
+      /* The circles on the timeline for the time bubbles */
+      .bubble-container::after {
+          right: -17px;
+      }
 
+     /*------------------*/
+      /* style intro item */
+      /*------------------*/
+
+      /* style time bubbles */
+      .time-bubble {
+        width: 110px;
+        height: 110px;
+      }
+
+      .bubble-container {
+        width: 50%;
+        padding: 10px 40px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end; /* to align the bubble to the right side of the left side of timeline*/
+      }
+
+      /* Add arrows to the left container (pointing right) */
+      .left-bubble::before {
+            content: '';
+            height: 0;
+            position: absolute;
+            top: 70px;
+            width: 30px;
+            z-index: 1;
+            right: 10px;
+      }
 
 
 
